fix: change z-index

--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -9,7 +9,7 @@
   justify-content: center;
   align-items: center;
   padding: 16px;
-  z-index: 90;
+  z-index: 30;
 }
 .title {
   margin-inline-start: auto;
